Correccion photo reel,
Añadi los murales y photo reel al ARAnchor del plano, y ademas inclui .gravity and heading en la configuracion de arkit. Tambien se corrigio la funcion de checar las vueltas del photo reel, funciona solo en orden cronologico hacia un lado.

--- a/WorldTracking/Info.plist
+++ b/WorldTracking/Info.plist
@@ -28,6 +28,8 @@
 	<string>Se requiere guardar capturas de pantalla en el carrete de fotos</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Se requiere guardar capturas de pantalla en el carrete de fotos</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Se requiere el GPS para la orientación de la escena virtual</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
